# curvault

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml  typecheck.yml
scripts/: check.sh  render-icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/services/: cardmon.rs  fido2.rs  gp.rs  issuance.rs  mod.rs  opensc.rs  pcsc.rs  pkcs15.rs  profile.rs  updates.rs  vault.rs
src/components/: BrandBackdrop.tsx  BrandLogo.tsx  LoadingOverlay.tsx  LogPanel.tsx  Sidebar.tsx  StatusBar.tsx
src/lib/: aids.ts  api.ts  cardWatch.tsx  dialog.ts
src/types/: index.ts
src/views/: AboutView.tsx  AboutWindow.tsx  AppletInstallerView.tsx  AppletsView.tsx  Dashboard.tsx  Fido2View.tsx  GpKeysView.tsx  IssuanceView.tsx  Pkcs11ObjectsView.tsx  Pkcs15ObjectsView.tsx  Pkcs15View.tsx  ProfilesView.tsx  ReadersView.tsx  StickerView.tsx  UpdaterWindow.tsx
