[package]
name = "curvault"
version = "0.1.24"
description = "Curvault — desktop card-issuance workstation for IsoApplet / JavaCard / FIDO2."
authors = ["wa-otomia"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "curvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

keyring = "3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
hex = "0.4"
regex = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# keyring 3.x gates the real OS credential stores behind features. Without
# them it falls back to a non-persistent store, which is exactly why
# set_password "succeeds" but the next get_password returns NoEntry. Enable
# the native backend per platform.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
